Adição da GestorDeLicenca.java
Alteração da Licenca.java, ControleExecucao.java e Sistema.java.

Continuação e finzalizacao da implementação da geração de chaves simétricas e assimétricas de forma segura.
Incorporamento do uso de hashes para garantir a integridade das informações.
Certificar-se de que as chaves e informações sensíveis são armazenadas de maneira segura.